Implemented tests using process isolation (fixes #1)
This ensures that scripts with side effects (like require_once) do not
influence the following tests

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "PhpAutoLoaderTest\\Tests\\": "tests/"
+            "PhpAutoLoaderTest\\tests\\": "tests/"
         }
     },
     "bin": ["src/main.php"]
