--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ php:
 
 before_script:
   - composer install
-script: ./vendor/bin/phpunit tests/
+script: ./vendor/bin/phpunit tests/ && php ./src/main.php vendor/autoload.php src
